adding web routing

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /* ----------------Global variables-----------------*/
 :root {
   /* -----------------Fonts--------------------  */
-  --main-font: "Baloo Bhaijaan 2", Arial, Helvetica;
+  --main-font: "Baloo Bhaijaan 2", Helvetica;
   /* ------------------Colors------------------- */
   --primary: #d05595;
   --secondary: #58a3ad;
