--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,9 @@
   --main-font: "Baloo Bhaijaan 2", Helvetica;
   /* ------------------Colors------------------- */
   --primary: #d05595;
+  --primary-hover: #f563ae;
   --secondary: #58a3ad;
+  --secondary-hover: #6ccbd8;
   --warn-black: #212121;
   --black: #000000;
   --white: rgb(255, 255, 255);
