--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -21,4 +21,73 @@
 }
 .main-right {
   background-color: var(--primary);
+  display: grid;
+  place-items: center;
+}
+
+.main-right .form-container {
+  max-width: 45rem;
+  max-height: 67rem;
+  text-align: center;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  gap: 1rem;
+  background-color: var(--white);
+  padding: 6rem;
+  border-radius: 1.5rem;
+  box-shadow: 4px 4px 8px 2px rgb(0 0 0 / 20%);
+}
+.form-container img {
+  width: 12.5rem;
+  margin: 0 auto;
+}
+.form-container h3 {
+  font-size: 2.8rem;
+  font-weight: bold;
+}
+.form-container p {
+  font-size: 1.6rem;
+  font-weight: 600;
+}
+.form-container p strong {
+  color: var(--primary);
+}
+form .email,
+form .password {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  font-size: 1.6rem;
+  font-weight: normal;
+}
+form input {
+  padding: 1.5rem;
+  border-radius: 1.5rem;
+  border: 1px solid var(--gray);
+  outline: var(--primary);
+}
+form button {
+  padding: 1.3rem;
+  border-radius: 1.5rem;
+  margin-top: 2rem;
+  border: none;
+  background-color: var(--primary);
+  font-size: 2rem;
+  color: var(--white);
+  width: 100%;
+  font-weight: bold;
+  cursor: pointer;
+}
+form button:hover {
+  background-color: var(--primary-hover);
+}
+.form-container p {
+  color: var(--primary);
+  font-weight: normal;
+  cursor: pointer;
+}
+.form-container p:hover {
+  color: var(--primary-hover);
 }
