--- a/src/styles/Spinner.css
+++ b/src/styles/Spinner.css
@@ -12,11 +12,18 @@
   width: 64px;
   height: 64px;
   margin: 8px;
-  border: 8px solid var(--primary);
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+}
+.lds-ring .primary {
+  border: 8px solid var(--primary);
   border-color: var(--primary) transparent transparent transparent;
 }
+.lds-ring .secondary {
+  border: 8px solid var(--secondary);
+  border-color: var(--secondary) transparent transparent transparent;
+}
+
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
 }
