--- a/src/styles/Error.css
+++ b/src/styles/Error.css
@@ -5,7 +5,7 @@
 .error-msg em {
   font-size: var(--sm);
   font-weight: bold;
-  margin-right: 0.5rem;
+  /* margin-right: 0.5rem; */
 }
 .error-msg .primary {
   color: var(--primary);
